style.css
.body {
    font-family: 'Roboto', Arial, sans-serif;
    margin: 0;
    padding: 0;
}

.header {
    background-color: #1F2937;  
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 16px 200px;
  }
.logo {
    font-size: 24px;
    color:#F9FAF8;
    font-weight: bold;
}

.links {
    display: flex;
    list-style: none;
    gap: 24px;
    margin: 0;
    padding: 0;
}

.links a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

.left, .right {
    display: flex;
    align-items: center;
    gap: 16px;
}

.hero {
    background-color: #1F2937;
    display: flex;
    padding: 100px 200px;
    gap: 10px;
    
}

.hero-content {
    flex: 1;
    display: flex;
    justify-content: center;
    flex-direction: column;
    gap : 10px;
}

.hero h1 {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    margin : 0;
}

.hero p {
    font-size: 18px;
    color: #E5E7EB;
    margin: 0 0 10px 0;
}

.A-button-that-does-nothing {
    background-color: #3882F6;
    color: #F9FAF8;
    border: none;
    border-radius: 8px;
    padding: 8px 24px;
    font-weight: bold;
    width: fit-content;
    cursor: pointer;
}
.hero-image {
    flex: 1;
    background-color: #6d747d;
    color: #F9FAF8;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 220px;
}

.information {
    text-align: center;
    padding: 50px 200px 100px;
}

.information h2 {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
    margin-bottom: 50px;
}
.cards {
    display: flex;
    justify-content: center;
    gap: 50px;
    align-items: center;
    min-height: 220px;
}

.card {
    max-width: 150px;
}

.box {
    height: 150px;
    width: 150px;
    border: 4px solid #3882F6;
    border-radius: 10px;
    margin-bottom: 10px;
}
.card p {
    font-size: 16px;
    color: #1F2937;
}

.quote-section {
    background-color: #E5E7EB;
    padding: 100px 300px ;
}

.quote {
    display: flex;
    flex-direction: column;
}

.quote-text {
    font-size: 36px;
    font-style: italic;
    font-weight: light;
    color: #1F2937;
    margin: 0;
}

.quote-author {
    font-weight: bold;
    text-align: right;
    font-size: 24px;
    margin: 0;
}

.sign-up {
    padding: 100px 200px;
    display: flex;
    justify-content: center;
}
 
.sign-up-container {
    background-color: #3882F6;
    border-radius: 10px;
    padding: 50px 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.sign-up-text h3 {
    color: #F9FAF8;
    margin: 0;
    font-size: 24px;
}

.sign-up-text p {
    color: #E5E7EB;
    margin: 5px 0 0 0 ;
}

.sign-up-button {
    background-color: #3882F6;
    color: #F9FAF8;
    border: 2px solid #F9FAF8;
    border-radius: 8px;
    padding: 8px 24px;
    font-weight: bold;
    cursor: pointer;
}

.footer {
    background-color: #1F2937;
    color: #E5E7EB;
    text-align: center;
    padding: 30px 0;
}

